force-app/main/default/objects/Country__c/Country__c.object-meta.xml
<CustomObject>
    <description>FAXシステムで港を登録されている国のみを登録※全世界の国を網羅しているわけではない。</description>
    <label>国</label>
    <nameField>
        <label>国名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>