force-app/main/default/objects/Country__c/fields/country_area__c.field-meta.xml
<CustomField>
    <fullName>country_area__c</fullName>
    <description>山本</description>
    <label>国エリア</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>インド洋地域</fullName>
            </value>
            <value>
                <fullName>オセアニア</fullName>
            </value>
            <value>
                <fullName>ロシア</fullName>
            </value>
            <value>
                <fullName>西アフリカ</fullName>
            </value>
            <value>
                <fullName>西ヨーロッパ</fullName>
            </value>
            <value>
                <fullName>地中海地域</fullName>
            </value>
            <value>
                <fullName>中央アジア</fullName>
            </value>
            <value>
                <fullName>中央アフリカ</fullName>
            </value>
            <value>
                <fullName>中央アメリカ</fullName>
            </value>
            <value>
                <fullName>中東</fullName>
            </value>
            <value>
                <fullName>東アジア</fullName>
            </value>
            <value>
                <fullName>東アフリカ</fullName>
            </value>
            <value>
                <fullName>東ヨーロッパ</fullName>
            </value>
            <value>
                <fullName>東南アジア</fullName>
            </value>
            <value>
                <fullName>南アジア</fullName>
            </value>
            <value>
                <fullName>南アフリカ</fullName>
            </value>
            <value>
                <fullName>南アメリカ</fullName>
            </value>
            <value>
                <fullName>南極</fullName>
            </value>
            <value>
                <fullName>北アフリカ</fullName>
            </value>
            <value>
                <fullName>北アメリカ</fullName>
            </value>
            <value>
                <fullName>北ヨーロッパ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>