force-app/main/default/objects/Country__c/fields/country_cd__c.field-meta.xml
<CustomField>
    <fullName>country_cd__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>国コード</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>