force-app/main/default/objects/Country__c/fields/Country_English__c.field-meta.xml
<CustomField>
    <fullName>Country_English__c</fullName>
    <label>国名（英字）</label>
    <length>100</length>
    <type>Text</type>
</CustomField>