force-app/main/default/objects/Country__c/fields/Countrys_Situation__c.field-meta.xml
<CustomField>
    <fullName>Countrys_Situation__c</fullName>
    <label>情勢による、はなまるへの影響</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>