force-app/main/default/objects/Country__c/fields/Import_regulation_detail__c.field-meta.xml
<CustomField>
    <fullName>Import_regulation_detail__c</fullName>
    <label>輸入規制詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>