force-app/main/default/objects/Country__c/fields/Import_Regulations_Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Import_Regulations_Last_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最終更新者（輸入規制）</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Import_Regulations_Last_Updated_By</relationshipName>
    <type>Lookup</type>
</CustomField>