force-app/main/default/objects/Country__c/fields/Last_Update_Date_of_Import_Regulations__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Date_of_Import_Regulations__c</fullName>
    <label>最終更新日（輸入規制）</label>
    <type>Date</type>
</CustomField>