force-app/main/default/objects/Country__c/fields/Popular_models__c.field-meta.xml
<CustomField>
    <fullName>Popular_models__c</fullName>
    <label>人気車種</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>