force-app/main/default/objects/Country__c/fields/Steering_Regulation__c.field-meta.xml
<CustomField>
    <fullName>Steering_Regulation__c</fullName>
    <label>ハンドル規制</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>右</fullName>
            </value>
            <value>
                <fullName>左</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>