force-app/main/default/objects/Country__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>country_cd__c</columns>
    <columns>Country_English__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>